--- a/_posts/2020/about-me/2020-04-18-about-me.md
+++ b/_posts/2020/about-me/2020-04-18-about-me.md
@@ -7,10 +7,10 @@ comments: true
 share: true
 related: true
 categories:
-- 
+- About-Me
 toc: true
 toc_sticky: true
-toc_label: 목차
+toc_label: Hello, World!
 description: 
 article_tag1: I'm Jiyoun.
 article_tag2: More about myself
