--- a/_posts/2020/MySQL/2020-10-20-mysql-01.md
+++ b/_posts/2020/MySQL/2020-10-20-mysql-01.md
@@ -1,5 +1,5 @@
 ---
-title: 'MySQL 설치 및 설정'
+title: 'MySQL00 설치 후 접속하기'
 layout: single
 author_profile: true
 read_time: true
@@ -27,9 +27,9 @@ last_modified_at: '2020-10-01 22:00:00 +0800'
 비트캠프 서초본원 엄진영 강사님의 수업을 듣고 정리했습니다.
 
 ---
-# MySQL 설치 후 설정
+# 1. MySQL 시작하기
 
-## MySQL 서버에 접속하기
+## (1) MySQL 서버에 접속
 
 ### 로컬 MySQL 서버에 접속
 
@@ -45,13 +45,13 @@ mysql -h 서버주소 -u root -p
 Enter password: 암호입력
 ```
 
-## MySQL root 암호 변경
+## (2) root 암호 변경
 
 ```sql
 alter user 'root'@'localhost' identified by '암호';
 ```
 
-## MySQL 사용자 추가
+## (3) 사용자 추가
 
 ```sql
 CREATE USER '사용자아이디'@'서버주소' IDENTIFIED BY '암호';
@@ -74,7 +74,7 @@ CREATE USER 'study'@'localhost' IDENTIFIED BY '1111';
 CREATE USER 'study'@'%' IDENTIFIED BY '1111';
 ```
 
-## MySQL 사용자 목록 조회
+## (4) 사용자 목록 조회
 
 ```sql
 select user from 데이터베이스명.테이블명;
@@ -84,7 +84,9 @@ select user from 데이터베이스명.테이블명;
 select user from mysql.user;
 ```
 
-## MySQL 데이터베이스 생성
+# 2. MySQL 데이터베이스
+
+## (1) 데이터 베이스 생성
 
 ```sql
 CREATE DATABASE 데이터베이스명
@@ -98,7 +100,7 @@ DEFAULT CHARACTER SET utf8
 DEFAULT COLLATE utf8_general_ci;
 ```
 
-## MySQL 사용자에게 데이터베이스 사용 권한 부여
+## (2) 사용자에게 데이터베이스 사용 권한 부여
 
 ```sql
 GRANT ALL ON 데이터베이스명.* TO '사용자아이디'@'서버주소';
@@ -108,15 +110,15 @@ GRANT ALL ON 데이터베이스명.* TO '사용자아이디'@'서버주소';
 GRANT ALL ON studydb.* TO 'study'@'localhost';
 ```
 
-## 데이터베이스 목록 조회
+## (3) 데이터베이스 목록 조회
 
 ```sql
 show databases;
 ```
 
-## 사용자 교체
+## (4) 사용자 교체
 
-- 프로그램 종료 후 다시 실행
+- 사용자를 교체하기 위해서는 프로그램 종료한 후 다시 mysql 서버에 접속해야 한다.
 
 ```sql
 quit
@@ -126,7 +128,7 @@ quit
 mysql -u 데이터베이스명 -p
 ```
 
-## 기본으로 사용할 데이터베이스 지정하기
+## (5) 기본으로 사용할 데이터베이스 지정하기
 
 ```sql
 use 데이터베이스명;
@@ -136,9 +138,8 @@ use 데이터베이스명;
 use studydb;
 ```
 
-## 데이터베이스의 전체 테이블 목록 조회
+## (5) 데이터베이스의 전체 테이블 목록 조회
 
 ```sql
 show tables;
 ```
-  
