--- a/_posts/2020/MySQL/2020-10-20-mysql-00.md
+++ b/_posts/2020/MySQL/2020-10-20-mysql-00.md
@@ -16,8 +16,8 @@ toc_label: Contents
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
 article_tag1: 1. MySQL 시작하기
 article_tag2: 2. MySQL 데이터베이스
-article_section: 네트워크
-meta_keywords: 모두의 네트워크, network-basic
+article_section: MySQL
+meta_keywords: MySQL, DBMS
 last_modified_at: '2020-10-20 22:00:00 +0800'
 ---
 
