--- a/_posts/2020/MySQL/2020-10-22-mysql-02.md
+++ b/_posts/2020/MySQL/2020-10-22-mysql-02.md
@@ -28,7 +28,7 @@ last_modified_at: '2020-10-22 22:00:00 +0800'
 ---
 # DDL(Data Definition Language)
 
-DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는 SQL 명령이다.
+DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는 SQL 명령
 
 - 데이터베이스(database) = 스키마(schema)
 - 테이블(table)
@@ -44,19 +44,16 @@ DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는
 ## 1. 데이터베이스
 
 ### 데이터베이스 생성
-
 ```sql
 create database 데이터베이스명 옵션들...;
 ```
 
 ### 데이터베이스 삭제
-
 ```sql
 drop database 데이터베이스명;
 ```
 
 ### 데이터베이스 변경
-
 ```sql
 alter database 데이터베이스명 옵션들...;
 ```
@@ -64,7 +61,6 @@ alter database 데이터베이스명 옵션들...;
 ## 2. 테이블
 
 ### 테이블 생성
-
 ```sql
 create table 테이블명 (
   컬럼명 타입 NULL여부 옵션,
@@ -86,7 +82,6 @@ create table test01 (
 ```
 
 ### 테이블 정보 보기
-
 ```sql
 describe 테이블명;
 desc 테이블명;
@@ -98,7 +93,6 @@ desc test01;
 ```
 
 ### 테이블 삭제하기
-
 ```sql
 drop table 테이블명;
 ```
@@ -209,24 +203,20 @@ insert into test1(no, age, name) values(6, null, null);
 ```
 
 ## 4. **컬럼 타입**
-
 ### **int**
 
 - 4바이트 크기의 정수 값 저장
 - 기타 tinyint(1), smallint(2), mediumint(3), bigint(8)
 
 ### **float**
-
 - 부동소수점 저장
 
 ### **numeric = decimal**
-
 - 전체 자릿수와 소수점 이하의 자릿수를 정밀하게 지정할 수 있다.
 - numeric(n,e) : 전체 n 자릿수 중에서 소수점은 e 자릿수다.
 - numeric : numeric(10, 0)과 같다.
 
 - 테이블 생성
-
 ```sql
 create table test1(
   c1 int, 
@@ -237,7 +227,6 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
-
 ```sql
 insert into test1(c1) values(100);
 insert into test1(c1) values(3.14); /* 소수점 이하 반올림하고 자름 */
@@ -267,7 +256,6 @@ insert into test1(c4) values(12345678.90); /* 소수점은 반올림 처리됨 *
 ```
 
 ### **char(n)**
-
 - 최대 n개의 문자를 저장.
 - 0 <= n <= 255
 - 고정 크기를 갖는다.
@@ -275,7 +263,6 @@ insert into test1(c4) values(12345678.90); /* 소수점은 반올림 처리됨 *
 - 메모리 크기가 고정되어서 검색할 때 빠르다.
 
 ### **varchar(n)**
-
 - 최대 n개의 문자를 저장.
 - 0 ~ 65535 바이트 크기를 갖는다.
 - n 값은 문자집합에 따라 최대 값이 다르다.
@@ -290,7 +277,6 @@ insert into test1(c4) values(12345678.90); /* 소수점은 반올림 처리됨 *
     그래서 검색할 때 위치를 계산해야 하기 때문에 검색 시 느리다.
 
 - 테이블 생성
-
 ```sql
 create table test1(
   c1 char(5),
@@ -300,7 +286,6 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
-
 ```sql
 insert into test1(c1) values('');
 insert into test1(c1) values('abcde');
@@ -316,7 +301,6 @@ insert into test1(c2) values('abcdefghi'); /* 입력 크기 초과 오류! */
 ```
 
 - 고정 크기와 가변 크기 비교
-
 ```sql
 insert into test1(c1) values('abc ');
 insert into test1(c2) values('abc');
@@ -326,27 +310,22 @@ select * from test1 where c1='abc';
 - DBMS 중에는 고정 크기인 컬럼의 값을 비교할 때 빈자리까지 검사하는 경우도 있다. 즉 c1='abc'에서는 데이터를 찾지 못하고, c1='abc  '여야만 데이터를 찾는 경우가 있다. 그러나 **mysql은 고정크기 컬럼이더라도 빈자리를 무시하고 데이터를 찾는다.**
 
 ### **text(65535), mediumtext(약 1.6MB), longtext(약 2GB)**
-
 - 긴 텍스트를 저장할 때 사용하는 컬럼 타입이다.
 - 오라클의 경우 long 타입과 CLOB(character large object) 타입이 있다.
 
 ### **date**
-
 - 날짜 정보를 저장할 때 사용한다.
 - 년, 월, 일 정보를 저장한다.
 - 오라클의 경우 날짜 뿐만 아니라 시간 정보도 저장한다.
 
 ### **time**
-
 - 시간 정보를 저장할 때 사용한다.
 - 시, 분, 초 정보를 저장한다.
 
 ### **datetime**
-
 - 날짜와 시간 정보를 함께 저장할 때 사용한다.
 
 - 테이블 생성
-
 ```sql
 create table test1(
   c1 date,
@@ -356,7 +335,6 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
-
 ```sql
 insert into test1(c1) values('2017-11-21');
 insert into test1(c2) values('16:12:35');
@@ -369,13 +347,11 @@ insert into test1(c2) values('2017-11-21 16:13:33'); /* 시간 정보만 저장*
 ```
 
 ### **boolean**
-
 - 보통 true, false를 의미하는 값을 저장할 때는 정수 1 또는 0으로 표현한다.
 - 또는 문자로 Y 또는 N으로 표현하기도 한다.
 - 컬럼을 생성할 때 tinyint(1)로 생성한다.
 
 - 테이블 생성
-
 ```sql
 create table test1(
   c1 char(1),
@@ -385,7 +361,6 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
-
 ```sql
 insert into test1(c1) values('Y'); /* yes */
 insert into test1(c1) values('N'); /* no */
@@ -418,40 +393,3 @@ insert into test1(c3) values(0); /* false -> 0 */
 
 - 숫자 컬럼인 경우 값을 설정할 때 문자로 표현할 수 있다.
 - 즉 문자열을 숫자로 바꿀 수 있으면 된다.
-
-
-- 조회 결과를 테이블처럼 사용하는 문법
-- select 문장이 복잡할 때 뷰로 정의 해놓고 사용하면 편리하다.
-
-- 테이블 생성
-
-```sql
-create table test1 (
-  no int primary key auto_increment,
-  name varchar(20) not null,
-  class varchar(10) not null,
-  working char(1) not null,
-  tel varchar(20)
-);
-```
-
-- 데이터 입력
-
-```sql
-insert into test1(name,class,working) values('aaa','java100','Y');
-insert into test1(name,class,working) values('bbb','java100','N');
-insert into test1(name,class,working) values('ccc','java100','Y');
-insert into test1(name,class,working) values('ddd','java100','N');
-insert into test1(name,class,working) values('eee','java100','Y');
-insert into test1(name,class,working) values('kkk','java101','N');
-insert into test1(name,class,working) values('lll','java101','Y');
-insert into test1(name,class,working) values('mmm','java101','N');
-insert into test1(name,class,working) values('nnn','java101','Y');
-insert into test1(name,class,working) values('ooo','java101','N');
-```
-
-- 직장인만 조회 (working = 'Y')
-
-```sql
-select no, name, class from test1 where working = 'Y';
-```
