--- a/_posts/2020/MySQL/2020-10-22-mysql-02.md
+++ b/_posts/2020/MySQL/2020-10-22-mysql-02.md
@@ -41,26 +41,30 @@ DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는
 - 프로시저(procedure)
 - 인덱스(index)
 
-## 1. 데이터베이스
+## 1. **데이터베이스**
 
 ### 데이터베이스 생성
+
 ```sql
 create database 데이터베이스명 옵션들...;
 ```
 
 ### 데이터베이스 삭제
+
 ```sql
 drop database 데이터베이스명;
 ```
 
 ### 데이터베이스 변경
+
 ```sql
 alter database 데이터베이스명 옵션들...;
 ```
 
-## 2. 테이블
+## 2. **테이블**
 
 ### 테이블 생성
+
 ```sql
 create table 테이블명 (
   컬럼명 타입 NULL여부 옵션,
@@ -82,6 +86,7 @@ create table test01 (
 ```
 
 ### 테이블 정보 보기
+
 ```sql
 describe 테이블명;
 desc 테이블명;
@@ -93,6 +98,7 @@ desc test01;
 ```
 
 ### 테이블 삭제하기
+
 ```sql
 drop table 테이블명;
 ```
@@ -203,20 +209,24 @@ insert into test1(no, age, name) values(6, null, null);
 ```
 
 ## 4. **컬럼 타입**
+
 ### **int**
 
 - 4바이트 크기의 정수 값 저장
 - 기타 tinyint(1), smallint(2), mediumint(3), bigint(8)
 
 ### **float**
+
 - 부동소수점 저장
 
 ### **numeric = decimal**
+
 - 전체 자릿수와 소수점 이하의 자릿수를 정밀하게 지정할 수 있다.
 - numeric(n,e) : 전체 n 자릿수 중에서 소수점은 e 자릿수다.
 - numeric : numeric(10, 0)과 같다.
 
 - 테이블 생성
+
 ```sql
 create table test1(
   c1 int, 
@@ -227,6 +237,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(c1) values(100);
 insert into test1(c1) values(3.14); /* 소수점 이하 반올림하고 자름 */
@@ -256,6 +267,7 @@ insert into test1(c4) values(12345678.90); /* 소수점은 반올림 처리됨 *
 ```
 
 ### **char(n)**
+
 - 최대 n개의 문자를 저장.
 - 0 <= n <= 255
 - 고정 크기를 갖는다.
@@ -263,6 +275,7 @@ insert into test1(c4) values(12345678.90); /* 소수점은 반올림 처리됨 *
 - 메모리 크기가 고정되어서 검색할 때 빠르다.
 
 ### **varchar(n)**
+
 - 최대 n개의 문자를 저장.
 - 0 ~ 65535 바이트 크기를 갖는다.
 - n 값은 문자집합에 따라 최대 값이 다르다.
@@ -277,6 +290,7 @@ insert into test1(c4) values(12345678.90); /* 소수점은 반올림 처리됨 *
     그래서 검색할 때 위치를 계산해야 하기 때문에 검색 시 느리다.
 
 - 테이블 생성
+
 ```sql
 create table test1(
   c1 char(5),
@@ -286,6 +300,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(c1) values('');
 insert into test1(c1) values('abcde');
@@ -301,6 +316,7 @@ insert into test1(c2) values('abcdefghi'); /* 입력 크기 초과 오류! */
 ```
 
 - 고정 크기와 가변 크기 비교
+
 ```sql
 insert into test1(c1) values('abc ');
 insert into test1(c2) values('abc');
@@ -310,22 +326,27 @@ select * from test1 where c1='abc';
 - DBMS 중에는 고정 크기인 컬럼의 값을 비교할 때 빈자리까지 검사하는 경우도 있다. 즉 c1='abc'에서는 데이터를 찾지 못하고, c1='abc  '여야만 데이터를 찾는 경우가 있다. 그러나 **mysql은 고정크기 컬럼이더라도 빈자리를 무시하고 데이터를 찾는다.**
 
 ### **text(65535), mediumtext(약 1.6MB), longtext(약 2GB)**
+
 - 긴 텍스트를 저장할 때 사용하는 컬럼 타입이다.
 - 오라클의 경우 long 타입과 CLOB(character large object) 타입이 있다.
 
 ### **date**
+
 - 날짜 정보를 저장할 때 사용한다.
 - 년, 월, 일 정보를 저장한다.
 - 오라클의 경우 날짜 뿐만 아니라 시간 정보도 저장한다.
 
 ### **time**
+
 - 시간 정보를 저장할 때 사용한다.
 - 시, 분, 초 정보를 저장한다.
 
 ### **datetime**
+
 - 날짜와 시간 정보를 함께 저장할 때 사용한다.
 
 - 테이블 생성
+
 ```sql
 create table test1(
   c1 date,
@@ -335,6 +356,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(c1) values('2017-11-21');
 insert into test1(c2) values('16:12:35');
@@ -347,11 +369,13 @@ insert into test1(c2) values('2017-11-21 16:13:33'); /* 시간 정보만 저장*
 ```
 
 ### **boolean**
+
 - 보통 true, false를 의미하는 값을 저장할 때는 정수 1 또는 0으로 표현한다.
 - 또는 문자로 Y 또는 N으로 표현하기도 한다.
 - 컬럼을 생성할 때 tinyint(1)로 생성한다.
 
 - 테이블 생성
+
 ```sql
 create table test1(
   c1 char(1),
@@ -361,6 +385,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(c1) values('Y'); /* yes */
 insert into test1(c1) values('N'); /* no */
