--- a/_posts/2020/MySQL/2020-10-22-mysql-03.md
+++ b/_posts/2020/MySQL/2020-10-22-mysql-03.md
@@ -43,10 +43,12 @@ DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는
 
 ## 5. **키 컬럼 지정**
 
-테이블
+테이블 : 
+
 - no, name, email, id, pwd, jumin, tel, postno, basic_addr, gender
 
-### Key  vs  Candidate Key
+### **Key  vs  Candidate Key**
+
 - **key**
     - 데이터를 구분할 때 사용하는 컬럼들의 집합
     - 예) {email}, {jumin}, {id}, {name, tel}, {name, tel, basic_addr, gender}, {name, jumin}, {email, id}, {id, name, email} ...
@@ -54,7 +56,8 @@ DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는
     - key들 중에서 최소 항목으로 줄인 키
     - 예) {jumin}, {email}, {id}, {name, tel}
 
-### Alternate Key  vs  Primary Key
+### **Alternate Key  vs  Primary Key**
+
 - **primary key (주 키)**
     - candidate key 중에서 DBMS 관리자가 사용하기로 결정한 key
     - 예) DBMS 관리자가 id 컬럼의 값을 데이터를 구분하는 키로 사용하기로 결정했다면, 주 키는 {id}가 된다.
@@ -62,7 +65,8 @@ DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는
 - **alternate key (대안 키)**
     - 비록 primary key는 아니지만, primary key처럼 데이터를 구분하는 용도로 대신 사용할 수 있다고 해서 대안 키(alternate key)라 부른다.
 
-### Artificial Key (인공 키)
+### **Artificial Key (인공 키)**
+
 - Primary key로 사용하기에 적절한 컬럼을 찾을 수 없다면, 이런 경우 key로 사용할 컬럼을 추가한다.
     - 예) 게시글 : 제목, 내용, 작성자, 등록일, 조회수
 - 보통 일련번호를 저장할 정수 타입의 컬럼을 추가한다.
@@ -81,13 +85,16 @@ DB 객체(테이블, 뷰, 함수, 트리거 등)를 생성, 변경, 삭제하는
             - 이렇게 값이 변경될 수 있는 경우에는 PK로 사용하지 말라.
             - 대신 회원 번호와 같은 임의의 key(인공 키)를 만들어 사용하는 것이 좋다.
 
-### Primary Key
+### **Primary Key**
+
 - 테이블의 데이터를 구분할 때 사용하는 컬럼들이다.
 - 줄여서 **PK**라고 표시한다.
 - PK 컬럼을 지정하지 않으면 데이터가 중복될 수 있다.
 
 **<PK를 지정하기 전>**
+
 - 테이블 생성
+
 ```sql
 create table test1(
   name varchar(20),
@@ -98,6 +105,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(name,kor,eng,math) values('aaa', 100, 100, 100);
 insert into test1(name,kor,eng,math) values('bbb', 90, 90, 90);
@@ -105,11 +113,13 @@ insert into test1(name,kor,eng,math) values('aaa', 100, 100, 100); /* 중복 허
 ```
 
 **<PK를 지정한 후>**
+
 ```sql
 컬럼명 타입 primary key
 ```
 
 - 테이블 생성
+
 ```sql
 create table test1(
   name varchar(20) primary key,
@@ -120,6 +130,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(name,kor,eng,math) values('aaa', 100, 100, 100);
 insert into test1(name,kor,eng,math) values('bbb', 90, 90, 90);
@@ -128,11 +139,13 @@ insert into test1(kor,eng,math) values(100, 100, 100); /* PK는 기본이 not nu
 ```
 
 **<한 개 이상의 컬럼을 PK로 지정하기>**
+
 - 두 개 이상의 컬럼을 묶어서 PK로 선언하고 싶다면 각 컬럼에 대해서 개별적으로 PK를 지정해서는 안된다.
 - 여러 개의 컬럼을 묶어서 PK로 지정하려면 별도의 문법을 사용해야 한다.
-  - constraint 제약조건이름 primary key (컬럼명, 컬럼명, ...)
+    - constraint 제약조건이름 primary key (컬럼명, 컬럼명, ...)
 
 - 테이블 생성
+
 ```sql
 create table test1(
   name varchar(20) primary key,
@@ -145,6 +158,7 @@ create table test1(
 ```
 
 - 테이블 생성
+
 ```sql
 create table test1(
   name varchar(20),
@@ -157,6 +171,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(name, age, kor, eng, math) values('aa', 10, 100, 100, 100);
 insert into test1(name, age, kor, eng, math) values('bb', 20, 90, 90, 90);
@@ -171,11 +186,15 @@ insert into test1(name, age, kor, eng, math) values('aa', 10, 88, 88, 88);
 ```
 
 **<임의의 값을 PK로 만들기>**
+
 - 여러 개의 컬럼을 묶어서 PK로 사용하면 데이터를 다루기가 불편하다.
-  즉 데이터를 찾을 때 마다 name과 age 값을 지정해야 한다.
+
+    즉 데이터를 찾을 때 마다 name과 age 값을 지정해야 한다.
+
 - 그래서 실무에서는 이런 경우 '학번'처럼 임의의 값을 저장하는 컬럼을 만들어 PK로 사용한다.
 
 - 테이블 생성
+
 ```sql
 create table test1(
   no int primary key, /* 학번 */
@@ -188,6 +207,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(no,name,age,kor,eng,math) values(1,'a',10,90,90,90);
 insert into test1(no,name,age,kor,eng,math) values(2,'a',11,91,91,91);
@@ -211,7 +231,9 @@ insert into test1(no,name,age,kor,eng,math) values(5,'c',20,81,81,81);
 - 그래서 PK를 대신해서 사용할 수 있는 key라고 해서 "**대안키(alternate key)**"라고 부른다.
 
 ### **unique = alternate key(대안키)**
+
 - 테이블 생성
+
 ```sql
 create table test1(
   no int primary key,
@@ -225,6 +247,7 @@ create table test1(
 ```
 
 - 다음과 같이 제약 조건을 모든 컬럼 선언 뒤에 놓을 수 있다.
+
 ```sql
 create table test1(
   no int,
@@ -239,6 +262,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(no,name,age,kor,eng,math) values(1,'a',10,90,90,90);
 insert into test1(no,name,age,kor,eng,math) values(2,'a',11,91,91,91);
@@ -263,6 +287,7 @@ insert into test1(no, name, age, kor, eng, math) values(6, 'c',50,81,81,81);
 ```
 
 ## 6. **index**
+
 - 검색 조건으로 사용되는 컬럼인 경우 따로 정렬해두면 데이터를 찾을 때  빨리 찾을 수 있다.
 - 특정 컬럼의 값을 **A-Z 또는 Z-A로 정렬시키는 문법**이 인덱스이다.
 - DBMS는 해당 컬럼의 값으로 정렬한 데이터 정보를 별도의 파일로 생성한다.
@@ -272,7 +297,9 @@ insert into test1(no, name, age, kor, eng, math) values(6, 'c',50,81,81,81);
 - 대신 **조회 속도는 빠르다.**
 
 ### 인덱스 생성
+
 - 새 테이블에 인덱스 생성
+
 ```sql
 create table 테이블명 ( 
   ... 
@@ -288,21 +315,25 @@ create index 인덱스명 on 테이블명(컬럼명1, 컬럼명2);
 ```
 
 - 기존 테이블에 인덱스 추가
+
 ```sql
 alter table 테이블명 add index (컬럼명1, 컬럼명2);
 ```
 
 ### 인덱스 조회
+
 ```sql
 show index from 테이블명;
 ```
 
 ### 인덱스 삭제
+
 ```sql
 drop index 인덱스명 on 테이블명;
 ```
 
 - 테이블 생성
+
 ```sql
 create table test1(
   no int primary key,
@@ -317,6 +348,7 @@ create table test1(
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(no,name,age,kor,eng,math) values(1,'aaa',20,80,80,80);
 insert into test1(no,name,age,kor,eng,math) values(2,'bbb',21,90,80,80);
@@ -329,18 +361,23 @@ insert into test1(no,name,age,kor,eng,math) values(5,'eee',20,80,80,80);
 - 단점, 이런 이유로 이름으로 검색할 때 찾기 속도는 빠르지만, 입력,변경,삭제 속도는 느리게 된다.
 
 ### fulltext index
+
 - fulltext index에 대해서는 조금 더 알아본 후 내용 보충하기!!!!
 
 ### **인덱스 컬럼의 활용**
+
 - 검색할 때 사용한다.
+
 ```sql
 select * from test1 where name = 'bbb';
 ```
 
 ## 7. 테이블 변경
-- 기존에 있는 테이블을 변경할 수 있다.
+
+기존에 있는 테이블을 변경할 수 있다.
 
 - 테이블 생성
+
 ```sql
 create table test1 (
   name varchar(3),
@@ -353,6 +390,7 @@ create table test1 (
 ```
 
 ### 테이블에 컬럼 추가
+
 ```sql
 alter table test1
   add column no int;
@@ -370,6 +408,7 @@ alter table test1
 ```
 
 ### 테이블에서 컬럼 삭제
+
 ```sql
 alter table test1
   drop column no;
@@ -387,24 +426,28 @@ alter table test1
 ```
 
 ### Primary Key 컬럼 지정
+
 ```sql
 alter table test1
   add constraint test1_pk primary key (no);
 ```
 
 ### Unique 컬럼 지정
+
 ```sql
 alter table test1
   add constraint test1_uk unique (name, age);
 ```
 
 ### Index 컬럼 지정
+
 ```sql
 alter table test1
   add fulltext index test1_name_idx (name);
 ```
 
 - primary key, unique, index 컬럼을 한 번에 지정할 수도 있다.
+
 ```sql
 alter table test1
   add constraint test1_uk unique (name, age),
@@ -412,6 +455,7 @@ alter table test1
 ```
 
 ### 컬럼에 옵션 추가
+
 ```sql
 alter table test1
   modify column name varchar(20) not null,
@@ -424,6 +468,7 @@ alter table test1
 ```
 
 - 데이터 입력 테스트
+
 ```sql
 insert into test1(no,name,age,kor,eng,math,sum,aver)
   values(1,'aaa',20,100,100,100,300,100);
@@ -440,12 +485,14 @@ insert into test1(no,name,age,kor,eng,math,sum,aver)
 ```
 
 ## 8. 컬럼 값 자동 증가(auto_increment)
+
 - **숫자 타입의 PK 컬럼인 경우** 값을 1씩 자동 증가시킬 수 있다.
 - 즉 데이터를 입력할 때 해당 컬럼의 값을 넣지 않아도 자동으로 증가된다.
 - 단 삭제를 통해 중간에 비어있는 번호는 다시 채우지 않는다. 즉 증가된 번호는 계속 앞으로 증가할 뿐이다.
     - 예) 게시판의 게시글 번호 - 중간에 글을 삭제해도 번호가 재조정되지 않는다.
 
 - 테이블 생성
+
 ```sql
 create table test1(
   no int not null,
@@ -455,6 +502,7 @@ create table test1(
 
 - 특정 컬럼의 값을 자동으로 증가하게 선언한다.
 - 단 **반드시 primary key 나 unique여야** 한다.
+
 ```sql
 /* 아직 no가 pk가 아니기 때문에 오류*/
 alter table test1
@@ -480,6 +528,7 @@ alter table test1
 - Oracle은 auto_increment라는 키워드가 없다.
 
 - 데이터 입력 테스트
+
 ```sql
 /* auto-increment 컬럼의 값을 직접 지정할 수 있다.*/
 insert into test1(no, name) values(1, 'xxx');
@@ -487,6 +536,7 @@ insert into test1(no, name) values(1, 'xxx');
 /* auto-increment 컬럼의 값을 생략하면 마지막 값을 증가시켜서 입력한다.*/
 insert into test1(name) values('aaa');
 
+c
 insert into test1(name) values('bbb'); /* no는 101이 입력된다.*/
 
 insert into test1(name) values('ccc'); /* no=102 */
@@ -507,10 +557,12 @@ insert into test1(name) values('fff'); /* no=? */
 ```
 
 ## 9. 뷰(view)
+
 - 조회 결과를 테이블처럼 사용하는 문법
 - select 문장이 복잡할 때 뷰로 정의 해놓고 사용하면 편리하다.
 
 - 테이블 생성
+
 ```sql
 create table test1 (
   no int primary key auto_increment,
@@ -522,6 +574,7 @@ create table test1 (
 ```
 
 - 데이터 입력
+
 ```sql
 insert into test1(name,class,working) values('aaa','java100','Y');
 insert into test1(name,class,working) values('bbb','java100','N');
@@ -536,42 +589,51 @@ insert into test1(name,class,working) values('ooo','java101','N');
 ```
 
 - 직장인만 조회 (working = 'Y')
+
 ```sql
 select no, name, class from test1 where working = 'Y';
 ```
 
 ### 뷰 생성
+
 - 직장인만 조회한 결과를 가상 테이블로 만들기
     - show tables;를 하면 하면 worker 가 조회된다.
+
 ```sql
 create view worker
   as select no, name, class from test1 where working = 'Y';
 ```
 
 - java100만 조회
+
 ```sql
 select no, name, working from test1 where class = 'java100';
 ```
 
 - java100만 조회한 결과를 가상 테이블로 만들기
+
 ```sql
 create view java100
 	as select no, name, working from test1 where class = 'java100';
 ```
 
 - view가 참조하는 테이블에 데이터를 입력한 후 view를 조회하면?
-  → 새로 추가된 컬럼이 함께 조회된다.
+
+    → 새로 추가된 컬럼이 함께 조회된다.
 
 - 뷰를 조회할 때 마다 매번 select 문장을 실행한다.
-  → 미리 결과를 만들어 놓는 것이 아니다. 일종의 조회 함수 역할을 한다.
+
+    → 미리 결과를 만들어 놓는 것이 아니다. 일종의 조회 함수 역할을 한다.
 
 - 목적은 복잡한 조회를 가상의 테이블로 표현할 수 있어 SQL문이 간결해진다.
+
 ```sql
 insert into test1(name,class,working) values('ppp','java101','Y');
 select * from worker;
 ```
 
 ### 뷰 삭제
+
 ```sql
 drop view worker;
 ```
