--- a/_posts/2020/MySQL/2020-10-23-mysql-04.md
+++ b/_posts/2020/MySQL/2020-10-23-mysql-04.md
@@ -56,7 +56,7 @@ alter table test1
 
 ```sql
 alter table test1
-  modify column no **int not null** auto_increment;
+  modify column no int not null auto_increment;
 ```
 
 ### 전체 컬럼 값 입력하기
