--- a/_posts/2020/MySQL/2020-10-24-mysql-05.md
+++ b/_posts/2020/MySQL/2020-10-24-mysql-05.md
@@ -93,16 +93,16 @@ select no, name, tel from test1;
 - 고객의 요청에 따라 특정 데이터를 요청한 형식으로 조회해야 하는 경우 사용한다.
 
 ```sql
-select **concat**(컬럼명, 컬럼명, 컬럼명,...) from 테이블;
+select concat(컬럼명, 컬럼명, 컬럼명,...) from 테이블;
 ```
 
 ```sql
-select 컬럼명, **concat**(컬럼명, 컬럼명, 컬럼명,...) from 테이블;
+select 컬럼명, concat(컬럼명, 컬럼명, 컬럼명,...) from 테이블;
 ```
 
 ```sql
-select no, **concat(name,'(',class,')')** from test1;
-select no, name, class, **concat(name,'(',class,')')** from test1;
+select no, concat(name,'(',class,')') from test1;
+select no, name, class, concat(name,'(',class,')') from test1;
 ```
 
 ### 조회하는 컬럼에 별명 붙이기
@@ -115,13 +115,13 @@ select no, name, class, **concat(name,'(',class,')')** from test1;
     - 대괄호([ ])는 써도 되고 안써도 된다.
 
 ```sql
-select 컬럼명 [as] **별명** ...
+select 컬럼명 [as] 별명 ...
 ```
 
 ```sql
 select 
-    no as **num**, 
-    concat(name,'(',class,')') as **title** 
+    no as num, 
+    concat(name,'(',class,')') as title 
 from test1; 
 ```
 
@@ -129,8 +129,8 @@ from test1;
 
 ```sql
 select 
-    no **num**, 
-    concat(name,'(',class,')') **title** 
+    no num, 
+    concat(name,'(',class,')') title
 from test1;
 ```
 
@@ -140,13 +140,13 @@ from test1;
 - 이렇게 조건을 지정하여 결과를 선택하는 것을 "**셀렉션(selection)**" 이라 한다.
 
 ```sql
-select ... from ... where **조건**...
+select ... from ... where 조건...
 ```
 
 ```sql
 select * 
 from test1
-where **no > 5**;
+where no > 5;
 ```
 
 ## 3. 연산자
@@ -172,7 +172,7 @@ select * from test1;
 ```sql
 select no, name, class, working
   from test1
-  where working='Y' **or** class='java100';
+  where working='Y' or class='java100';
 ```
 
 - java100기 학생 **중에(AND)** 재직자만 조회하기
@@ -180,7 +180,7 @@ select no, name, class, working
 ```sql
 select no, name, class, working
   from test1
-  where working='Y' **and** class='java100';
+  where working='Y' and class='java100';
 ```
 
 - java100기 학생 중에 재직자인 데이터의 no, name을 조회하기
@@ -200,19 +200,19 @@ select no, name
 ```sql
 select no, name, class, working
   from test1
-  where **not** working = 'Y';
+  where not working = 'Y';
 ```
 
 ```sql
 select no, name, class, working
   from test1
-  where working **!=** 'Y';
+  where working != 'Y';
 ```
 
 ```sql
 select no, name, class, working
   from test1
-  where working **<>** 'Y';
+  where working <> 'Y';
 ```
 
 - 학생 번호가 짝수인 경우 전화 번호를 '1111'로 변경하기
@@ -246,13 +246,13 @@ select *
 ```sql
 select *
   from test1
-  where tel **is not** null;
+  where tel is not null;
 ```
 
 ```sql
 select *
   from test1
-  where **not** tel **is** null;
+  where not tel is null;
 ```
 
 - 전화 번호가 없는 학생만 조회하라!
@@ -267,7 +267,7 @@ where tel = null; /* 실패 */
 ```sql
 select *
 from test1
-where tel **is** null; /* OK */
+where tel is null; /* OK */
 ```
 
 ### 사칙연산
@@ -362,7 +362,7 @@ update test1 /* test1을 바꾸는데 */
 ```sql
 select *
   from test1
-  where class **like** 'java**%**';
+  where class like 'java%';
 ```
 
 - class 이름이 101로 끝나는 반의 모든 학생 조회하기
@@ -370,7 +370,7 @@ select *
 ```sql
 select *
   from test1
-  where class **like** '**%**101';
+  where class like '%101';
 ```
 
 - class 이름에 java를 포함한 모든 학생 조회하기, 이 경우 조회 속도가 느리다.
@@ -378,7 +378,7 @@ select *
 ```sql
 select *
   from test1
-  where class **like** '**%**java**%**';
+  where class like '%java%';
 ```
 
 - 학생의 이름에서 첫번째 문자가 s이고 두번째 문자가 0인 학생 중에서  딱 세자의 이름을 가진 학생을 모두 조회하기
@@ -446,7 +446,7 @@ insert into test1(title, regdt) values('mmmm', '2017-12-31');
 ```sql
 select * 
   from test1
-  where regdt **=** '2017-6-17';
+  where regdt = '2017-6-17';
 ```
 
 - 특정 기간의 게시글 조회
@@ -454,13 +454,13 @@ select *
 ```sql
 select * 
   from test1
-  where regdt **between** '2017-11-1' **and** '2017-12-31';
+  where regdt between '2017-11-1' and '2017-12-31';
 ```
 
 ```sql
 select * 
   from test1
-  where regdt **>=** '2017-11-1' **and** regdt **<=** '2017-12-31';
+  where regdt >= '2017-11-1' and regdt <= '2017-12-31';
 ```
 
 ### 날짜를 다루는 연산자와 함수
@@ -468,25 +468,25 @@ select *
 - 현재 날짜 및 시간 알아내기
 
 ```sql
-select **now**();
+select now();
 ```
 
 - 현재 날짜 알아내기
 
 ```sql
-select **curdate**();
+select curdate();
 ```
 
 - 현재 시간 알아내기
 
 ```sql
-select **curtime**();
+select curtime();
 ```
 
 - 주어진 날짜, 시간에서 날짜만 뽑거나 시간만 뽑기
 
 ```sql
-select regdt, **date**(regdt), **time**(regdt) from test1;
+select regdt, date(regdt), time(regdt) from test1;
 ```
 
 - 특정 날짜에 시,분,초,일,월,년을 추가하거나 빼기
@@ -497,18 +497,18 @@ date_sub(날짜데이터, interval 값 단위);
 ```
 
 ```sql
-select date_add(now(), interval 11 **day**);
-select date_sub(now(), interval 11 **day**);
+select date_add(now(), interval 11 day);
+select date_sub(now(), interval 11 day);
 ```
 
 ```sql
-select date_add(now(), interval 1 **month**);
-select date_sub(now(), interval 1 **month**);
+select date_add(now(), interval 1 month);
+select date_sub(now(), interval 1 month);
 ```
 
 ```sql
-select date_add(now(), interval 1 **year**);
-select date_sub(now(), interval 1 **year**);
+select date_add(now(), interval 1 year);
+select date_sub(now(), interval 1 year);
 ```
 
 - 두 날짜 사이의 간격을 알아내기
@@ -582,5 +582,5 @@ insert into test1 (title, regdt) values('bbbb', '11/22/2017');
 
 ```sql
 insert into test1 (title, regdt) 
-  values('bbbb', **str_to_date**('11/22/2017', '%m/%d/%Y'));
+  values('bbbb', str_to_date('11/22/2017', '%m/%d/%Y'));
 ```
