--- a/_posts/2020/MySQL/2020-10-26-mysql-07.md
+++ b/_posts/2020/MySQL/2020-10-26-mysql-07.md
@@ -82,7 +82,7 @@ from room;
 ```sql
 select rno, loc, name 
 from room
-order by name **asc**;
+order by name asc;
 ```
 
 - asc는 생략 가능하다.
@@ -109,7 +109,7 @@ order by name;
 ```sql
 select rno, loc, name 
 from room
-order by name **desc**;
+order by name desc;
 ```
 
 - 이름은 오름 차순, 지점명도 오름 차순으로 정렬하기
@@ -118,7 +118,7 @@ order by name **desc**;
 ```sql
 select rno, loc, name 
 from room
-order by name **asc**, loc **asc**;
+order by name asc, loc asc;
 ```
 
 - 이름은 오름 차순, 지점명은 내림 차순으로 정렬하기
@@ -127,7 +127,7 @@ order by name **asc**, loc **asc**;
 ```sql
 select rno, loc, name 
 from room
-order by name **asc**, loc **desc**;
+order by name asc, loc desc;
 ```
 
 - 지점명은 오름 차순으로, 이름은 오름 차순  정렬하기
@@ -136,7 +136,7 @@ order by name **asc**, loc **desc**;
 ```sql
 select rno, loc, name 
 from room
-order by loc **asc**, name **asc**;
+order by loc asc, name asc;
 ```
 
 # 3. 라벨명
@@ -236,7 +236,7 @@ select distinct bank from tcher;
 
 ```sql
 select 컬럼명, 컬럼명, 컬럼명
-from 테이블명 **cross join** 테이블명;
+from 테이블명 cross join 테이블명;
 ```
 
 - mno가 두 테이블에 있을 경우 어떤 테이블의 컬럼인지 지정하지 않으면 실행 오류!
@@ -244,7 +244,7 @@ from 테이블명 **cross join** 테이블명;
 
 ```sql
 select mno, name, mno, work, bank
-from memb **cross join** stnt;
+from memb cross join stnt;
 /* ERROR 1052 (23000): Column 'mno' in field list is ambiguous */
 ```
 
@@ -266,13 +266,13 @@ from memb, stnt;
     - 테이블에 별명을 부여하고 그 별명을 사용하여 컬럼을 지정하라.
 
 ```sql
-select **테이블별명.컬럼명**, 컬럼명, **테이블별명.컬럼명**, 컬럼명
-from 테이블명 **테이블별명** **cross join** 테이블명 **테이블별명**;
+select 테이블별명.컬럼명, 컬럼명, 테이블별명.컬럼명, 컬럼명
+from 테이블명 테이블별명 cross join 테이블명 테이블별명;
 ```
 
 ```sql
-select **m**.mno, name, **s**.mno, work, bank
-from memb **m** cross join stnt **s**;  
+select m.mno, name, s.mno, work, bank
+from memb m cross join stnt s;  
 ```
 
 - 예전 문법
@@ -288,14 +288,14 @@ from memb m, stnt s;
 
 ```sql
 select 테이블별명.컬럼명, 컬럼명, 테이블별명.컬럼명, 컬럼명
-from 테이블명 테이블별명 **natural join** 테이블명 테이블별명;
+from 테이블명 테이블별명 natural join 테이블명 테이블별명;
 ```
 
 - mno라는 이름을 가진 컬럼 값을 기준으로 레코드를 연결한다.
 
 ```sql
 select m.mno, name, s.mno, work, bank
-from memb m **natural join** stnt s;   
+from memb m natural join stnt s;   
 ```
 
 - 예전 문법
@@ -318,7 +318,7 @@ where m.mno=s.mno;
 
 ```sql
 select m.mno, name, s.mno, work, bank
-from memb m **join** stnt s **using** (mno);
+from memb m join stnt s using (mno);
 ```
 
 ### **natural join 의 문제점 II**
@@ -328,7 +328,7 @@ from memb m **join** stnt s **using** (mno);
 
 ```sql
 select m.mno, name, s.mno, work, bank
-from memb m **inner** **join** stnt s **on** m.mno=s.mno;
+from memb m inner join stnt s on m.mno=s.mno;
 ```
 
 ## (3) INNER JOIN
@@ -337,14 +337,14 @@ from memb m **inner** **join** stnt s **on** m.mno=s.mno;
 
 ```sql
 select 테이블별명A.컬럼명, 컬럼명, 테이블별명B.컬럼명, 컬럼명
-from 테이블명 테이블별명A **inner join** 테이블명 테이블별명B **on** A.컬럼=B.컬럼 ;
+from 테이블명 테이블별명A inner join 테이블명 테이블별명B on A.컬럼=B.컬럼 ;
 ```
 
 - inner는 생략 가능하다.
 
 ```sql
 select m.mno, name, s.mno, work, bank
-from memb m **join** stnt s **on** m.mno=s.mno;
+from memb m join stnt s on m.mno=s.mno;
 /* 즉 inner join 은 기준 컬럼의 값이 일치할 때만 데이터를 연결한다. */
 ```
 
@@ -382,7 +382,7 @@ select
     r.rno, 
     r.loc, 
     r.name
-from lect l **inner** **join** room r **on** l.rno=r.rno;
+from lect l inner join room r on l.rno=r.rno;
 ```
 
 - inner join의 경우, **강의실이 아직 지정되지 않은 강의의 경우 강의실 테이블의 데이터와 연결하지 못해 결과로 출력되지 않는 문제**가 있다.
@@ -417,7 +417,7 @@ select
     r.rno, 
     r.loc, 
     r.name
-from lect l **right** **outer** **join** room r **on** l.rno=r.rno;
+from lect l right outer join room r on l.rno=r.rno;
 /* room을 기준으로 lect 데이터를 연결한다. 
  * 만약 room과 일치하는 데이터가 lect에 없더라도 room 데이터를 출력한다!
  */
@@ -434,7 +434,7 @@ select
     r.rno, 
     r.loc, 
     r.name
-from lect l **left** **outer** **join** room r **on** l.rno=r.rno;
+from lect l left outer join room r on l.rno=r.rno;
 /* lect을 기준으로 room 데이터를 연결한다. 
  * 만약 lect와 일치하는 데이터가 room에 없더라도 lect 데이터를 출력한다!
  */
@@ -451,10 +451,10 @@ from memb;
 
 -- 2) 학생 데이터를 가져와서 연결하기
 select mno, name, work /* mno는 fk이면서도 pk */
-from memb **natural** **join** stnt;
+from memb natural join stnt;
 
 select mno, name, work
-from memb **join** stnt **using**(mno);
+from memb join stnt using(mno);
 
 select memb.mno, name, work
 from memb, stnt
