--- a/_posts/2020/MySQL/2020-10-28-mysql-09.md
+++ b/_posts/2020/MySQL/2020-10-28-mysql-09.md
@@ -31,7 +31,7 @@ last_modified_at: '2020-10-28 22:00:00 +0800'
 - 사용자의 입력 값으로 SQL 문을 만들 때 가능한 공격 방법이다.
 - 값을 입력할 때 SQL 문에 영향을 끼치는 SQL 코드를 함께 삽입하는 방법이다.
 
-### 예)
+### SQL 삽입 공격 예
 
 - SQL 문: `select * from user where username='아이디' and password='암호'`
     - 아이디: `hongkildong`
@@ -119,4 +119,4 @@ last_modified_at: '2020-10-28 22:00:00 +0800'
 - 각 *Row Source* 바이너리 명령은 테이블이나 뷰, 조인 또는 그룹 연산 결과를 생성한다.
 - 최종 실행 결과는 애플리케이션에게 리턴할 **결과 데이터(Result Set)**이다.
 
-![SQL 실행과정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/mysql/sql-processing.png){: .align-center}{: width="80%" height="80%"}
+![SQL 실행과정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/mysql/sql-processing.png){: .align-center}{: width="60%" height="60%"}
