--- a/_posts/2020/MySQL/2020-10-28-mysql-09.md
+++ b/_posts/2020/MySQL/2020-10-28-mysql-09.md
@@ -71,6 +71,14 @@ last_modified_at: '2020-10-28 22:00:00 +0800'
     - 이 이후에는 내부 **SQL 공유 풀**에 보관된 최적화된 **실행 계획**을 바로 **실행**한다. (hard parsing까지 되어있다.)
     - 따라서 SQL을 준비한 후 반복하여 실행하는 경우에는 Statement 보다 빠르다.
 
+|                       | Statement          | PreparedStatement    |
+|-----------------------|--------------------|----------------------|
+| SQL 삽입 공격         | 가능               | 불가능               |
+| 바이너리 컬럼 값 넣기 | 불가능             | 가능                 |
+| 코드의 간결함         | 가독성이 떨어진다. | 가독성이 좋다.       |
+| 실행 속도             | 느리다.            | 빠르다.              |
+  
+
 # 2. **SQL 실행 과정(오라클 DBMS의 예)**
 
 ## (1) **SQL 구분 분석(Parsing)**
