--- a/_posts/2020/Database/2020-11-13-database.md
+++ b/_posts/2020/Database/2020-11-13-database.md
@@ -146,14 +146,16 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
     - 학생(이름,전화,이메일,주소,…)
     - 강의(강의명,설명,시작일,종료일,강의료,…)
 
-    ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/4c8bcbd6-5466-4c28-afc3-6541e0126fb0/_2020-11-13__11.35.40.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/4c8bcbd6-5466-4c28-afc3-6541e0126fb0/_2020-11-13__11.35.40.png)
+![DB모델링 엔티티 식별 및 속성 식별]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-01.png){: .align-center}{: width="100%" height="100%"}
+
 
 ### (2) 주 키 선정(Primary Key; PK)
 
 - **데이터를 구분할 때 사용할 식별자**를 지정한다.
 - 만약 PK로 지정할 적절한 컬럼이 없거나, 있더라도 여러 개의 컬럼을 묶어서 사용해야 하는 경우 **surrogate key**(대리 키=인공 키) 사용을 고려하라!
 
-    ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/2832ee55-f879-4271-89f7-f47d509340d0/_2020-11-13__11.36.08.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/2832ee55-f879-4271-89f7-f47d509340d0/_2020-11-13__11.36.08.png)
+![DB모델링 주 키 선정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-02.png){: .align-center}{: width="100%" height="100%"}
+
 
 ### (3) 포함 관계 및 배타적 관계 추가
 
@@ -165,7 +167,8 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
     - 여러 테이블 중에서 오직 한 개의 테이블만 포함할 수 있는 관계다.
 - 예) 학생, 강사, 매니저에서 공통되는 데이터를 '사용자'라는 별도의 테이블로 정의했다. 이 경우 사용자 테이블이 부모 테이블이다. 학생, 강사, 매니저 테이블은 자식 테이블이다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/34ac4582-0a17-445b-9618-22d48cbea469/_2020-11-13__11.40.02.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/34ac4582-0a17-445b-9618-22d48cbea469/_2020-11-13__11.40.02.png)
+![DB모델링 포함 관계 및 배타적 관계 추가]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-03.png){: .align-center}{: width="100%" height="100%"}
+
 
 ### (4) 제1정규화
 
@@ -178,9 +181,10 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 중복 데이터? 수강생 데이터, 강의 데이터, 강사 데이터, …
 - 중복 컬럼? 사진1, 사진2, 사진3
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/2b515cd7-469b-4e44-b5a0-176922a7f85b/_2020-11-14__12.36.38.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/2b515cd7-469b-4e44-b5a0-176922a7f85b/_2020-11-14__12.36.38.png)
+![DB모델링 제1정규화]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-04-1.png){: .align-center}{: width="100%" height="100%"}
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/347fb382-6651-40cf-8768-03d818a55ac7/dbmodeling-04-2.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/347fb382-6651-40cf-8768-03d818a55ac7/dbmodeling-04-2.png)
+
+![DB모델링 ]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-04-2.png){: .align-center}{: width="100%" height="100%"}
 
 ### (5) 제2정규화
 
@@ -192,22 +196,22 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 어떤 컬럼이 PK가 아닌 다른 일반 컬럼에 종속되는 경우가 있다면, 별도 테이블로 분리하여 부모-자식 관계를 맺는다.
 - 예) 사용자 테이블의 우편번호와 기본주소의 경우, 각각의 컬럼처럼 보이지만 사실 **기본주소는 우편 번호에 종속**된다. 따라서 별도의 테이블로 분리하는데, 이 때 주소 테이블이 부모 테이블이 된다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/11236db9-af17-4a77-95b3-6c48634e5d46/_2020-11-14__12.40.57.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/11236db9-af17-4a77-95b3-6c48634e5d46/_2020-11-14__12.40.57.png)
+![DB모델링 ]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-01.png){: .align-center}{: width="100%" height="100%"}
+
 
 ### (7) 다 대 다 관계의 해소
 
 - 테이블과 테이블 사이에 다 대 다 관계를 형성한다면, 일 대 다의 관계로 변경해야 한다.
 - 왜? DBMS는 물리적으로 다 대 다 관계의 데이터를 저장할 수 없다.
 - 해결책? 두 테이블의 관계를 저장할 테이블을 만든다. “**관계 테이블**” 이라 부른다. **관계 테이블은 각 테이블과 일 대 다의 관계를 맺는다.** 관계 테이블은 **연결 테이블**이라고 불리기도 한다.
-- 위의 예에서는 수강신청 테이블과 교육과정강사 테이블이 관계테이블이다.
+- 위의 예에서는 수강신청 테이블과 교육과정강사 테이블이 관계테이블이다. 강사 테이블과 교육과정 테이블은 다 대 다 관계를 형성한다. 여러 명의 강사가 한 교육과정을 담당할 수도 있고, 여러 교육과정을 한 강사가 담당할 수도 있기 때문이다.
 
-    ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/d4bb7c34-c24d-4b9d-a5e6-96e2972cd0d2/IMG_0012.jpg](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/d4bb7c34-c24d-4b9d-a5e6-96e2972cd0d2/IMG_0012.jpg)
+![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-07-1.jpg){: .align-center}{: width="100%" height="100%"}
 
-    강사 테이블과 교육과정 테이블은 다 대 다 관계를 형성한다. 여러 명의 강사가 한 교육과정을 담당할 수도 있고, 여러 교육과정을 한 강사가 담당할 수도 있기 때문이다. DBMS는 다 대 다 관계의 데이터를 저장할 수 없기 때문에
+- DBMS는 다 대 다 관계의 데이터를 저장할 수 없기 때문에 다 대 다 관계를 일 대 다 관계로 변경하기 위해 '교육과정강사'라는 테이블을 새로 만들었다. 그리고 이 테이블에 강사 테이블과 교육과정 테이블의 PK값인 교육과정 번호와 강사 번호를 저장하였다. 
+    
+![DB모델링 다 대 다 관계 해소]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-07-2.jpg){: .align-center}{: width="100%" height="100%"}
 
-    ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ea110db7-4c4c-46e5-b700-7801510e2cbb/IMG_0014.jpg](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ea110db7-4c4c-46e5-b700-7801510e2cbb/IMG_0014.jpg)
-
-    다 대 다 관계를 일 대 다 관계로 변경하기 위해 '교육과정강사'라는 테이블을 새로 만들었다. 그리고 이 테이블에 강사 테이블과 교육과정 테이블의 PK값인 교육과정 번호와 강사 번호를 저장하였다. 
 
 ### (8) 관계의 차수 지정
 
@@ -220,21 +224,25 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 관계 차수를 그림으로 표현
     - 일 대 일
 
-        ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8bb3a424-b960-46e1-a84f-1b601e1808fd/dbmodeling-08-1.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8bb3a424-b960-46e1-a84f-1b601e1808fd/dbmodeling-08-1.png)
+![DB모델링 일 대 일 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-1.png){: .align-center}{: width="100%" height="100%"}
+
 
     - 일 대 다
 
-        ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/146b5b4f-ce2d-4f08-a4f6-d19bd29f42d4/dbmodeling-08-2.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/146b5b4f-ce2d-4f08-a4f6-d19bd29f42d4/dbmodeling-08-2.png)
+![DB모델링 일 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-2.png){: .align-center}{: width="100%" height="100%"}
+
 
     - 다 대 다
 
-        ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/61c948f3-4378-438f-82d8-7a912763d91d/dbmodeling-08-3.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/61c948f3-4378-438f-82d8-7a912763d91d/dbmodeling-08-3.png)
+![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-3.jpg){: .align-center}{: width="100%" height="100%"}
+
 
 - 예) 교실과 교실 사진의 관계에서, 교실 사진에 null을 허용한다면 zero or more의 관계차수를 지정하고, null을 허용하지 않는다면(not null이라면) one more more의 관계 차수를 지정한다.
 
-    ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/300d659f-3320-4a12-a3e1-19bf81593432/dbmodeling-08-1.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/300d659f-3320-4a12-a3e1-19bf81593432/dbmodeling-08-1.png)
+![DB모델링 관계 차수 예]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-4.png){: .align-center}{: width="100%" height="100%"}
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/17b5c32f-e730-4d51-a043-ca44c3cc0845/_2020-11-14__12.14.34.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/17b5c32f-e730-4d51-a043-ca44c3cc0845/_2020-11-14__12.14.34.png)
+![DB모델링 관계 차수]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08.png){: .align-center}{: width="100%" height="100%"}
+
 
 ### (9) 유니크(Unique) 컬럼 지정
 
