--- a/_posts/2020/Database/2020-11-13-database.md
+++ b/_posts/2020/Database/2020-11-13-database.md
@@ -30,6 +30,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 ---
 # DB 모델링
 
+## 모델링와 렌더링
 ### 모델링?
 
 - 분석하고 구조화시켜 생각한 바를 글과 그림으로 표현한 것.
@@ -167,7 +168,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
     - 여러 테이블 중에서 오직 한 개의 테이블만 포함할 수 있는 관계다.
 - 예) 학생, 강사, 매니저에서 공통되는 데이터를 '사용자'라는 별도의 테이블로 정의했다. 이 경우 사용자 테이블이 부모 테이블이다. 학생, 강사, 매니저 테이블은 자식 테이블이다.
 
-![DB모델링 포함 관계 및 배타적 관계 추가]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-03.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 포함 관계 및 배타적 관계 추가]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-03.png){: .align-center}{: width="100%" height="100%"}
 
 
 ### (4) 제1정규화
@@ -181,10 +182,10 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 중복 데이터? 수강생 데이터, 강의 데이터, 강사 데이터, …
 - 중복 컬럼? 사진1, 사진2, 사진3
 
-![DB모델링 제1정규화]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-04-1.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 제1정규화]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-04-1.png){: .align-center}{: width="100%" height="100%"}
 
 
-![DB모델링 ]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-04-2.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 ]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-04-2.png){: .align-center}{: width="100%" height="100%"}
 
 ### (5) 제2정규화
 
@@ -196,7 +197,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 어떤 컬럼이 PK가 아닌 다른 일반 컬럼에 종속되는 경우가 있다면, 별도 테이블로 분리하여 부모-자식 관계를 맺는다.
 - 예) 사용자 테이블의 우편번호와 기본주소의 경우, 각각의 컬럼처럼 보이지만 사실 **기본주소는 우편 번호에 종속**된다. 따라서 별도의 테이블로 분리하는데, 이 때 주소 테이블이 부모 테이블이 된다.
 
-![DB모델링 ]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-01.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 ]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-01.png){: .align-center}{: width="100%" height="100%"}
 
 
 ### (7) 다 대 다 관계의 해소
@@ -206,11 +207,11 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 해결책? 두 테이블의 관계를 저장할 테이블을 만든다. “**관계 테이블**” 이라 부른다. **관계 테이블은 각 테이블과 일 대 다의 관계를 맺는다.** 관계 테이블은 **연결 테이블**이라고 불리기도 한다.
 - 위의 예에서는 수강신청 테이블과 교육과정강사 테이블이 관계테이블이다. 강사 테이블과 교육과정 테이블은 다 대 다 관계를 형성한다. 여러 명의 강사가 한 교육과정을 담당할 수도 있고, 여러 교육과정을 한 강사가 담당할 수도 있기 때문이다.
 
-![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-07-1.jpg){: .align-center}{: width="100%" height="100%"}
+![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-07-1.jpg){: .align-center}{: width="100%" height="100%"}
 
 - DBMS는 다 대 다 관계의 데이터를 저장할 수 없기 때문에 다 대 다 관계를 일 대 다 관계로 변경하기 위해 '교육과정강사'라는 테이블을 새로 만들었다. 그리고 이 테이블에 강사 테이블과 교육과정 테이블의 PK값인 교육과정 번호와 강사 번호를 저장하였다. 
     
-![DB모델링 다 대 다 관계 해소]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-07-2.jpg){: .align-center}{: width="100%" height="100%"}
+![DB모델링 다 대 다 관계 해소]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-07-2.jpg){: .align-center}{: width="100%" height="100%"}
 
 
 ### (8) 관계의 차수 지정
@@ -224,24 +225,24 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 관계 차수를 그림으로 표현
     - 일 대 일
 
-![DB모델링 일 대 일 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-1.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 일 대 일 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-1.png){: .align-center}{: width="100%" height="100%"}
 
 
     - 일 대 다
 
-![DB모델링 일 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-2.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 일 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-2.png){: .align-center}{: width="100%" height="100%"}
 
 
     - 다 대 다
 
-![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-3.jpg){: .align-center}{: width="100%" height="100%"}
+![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-3.jpg){: .align-center}{: width="100%" height="100%"}
 
 
 - 예) 교실과 교실 사진의 관계에서, 교실 사진에 null을 허용한다면 zero or more의 관계차수를 지정하고, null을 허용하지 않는다면(not null이라면) one more more의 관계 차수를 지정한다.
 
-![DB모델링 관계 차수 예]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08-4.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 관계 차수 예]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-4.png){: .align-center}{: width="100%" height="100%"}
 
-![DB모델링 관계 차수]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-08.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 관계 차수]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08.png){: .align-center}{: width="100%" height="100%"}
 
 
 ### (9) 유니크(Unique) 컬럼 지정
@@ -251,7 +252,8 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 즉 PK로 선정되지 않은 나머지 후보 키는 유니크 컬럼으로 지정하여 데이터가 중복되지 않도록 한다.
 - 예) 사용자 테이블에서 이메일을 유니크 컬럼으로 지정한다면, 사용자 정보를 저장할 때 이메일 정보를 중복으로 저장할 수 없다.
 
-    ![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/b693be2d-1e6d-4011-9386-37eb0e68ec16/dbmodeling09.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/b693be2d-1e6d-4011-9386-37eb0e68ec16/dbmodeling09.png)
+![DB모델링 유니크 컬럼 지정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-09.png){: .align-center}{: width="100%" height="100%"}
+
 
 - 주의) 이메일과 주민등록번호를 유니크로 지정하는 경우, 각각을 유니크로 지정해야 한다. (이메일, 주민등록번호)를 한 세트로 유니크로 지정하면 안된다.
 
@@ -259,7 +261,8 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 
 - 필수 입력 컬럼(not null)인지 선택 입력 컬럼(null)인지 지정한다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/c3cc51e8-4345-49a9-b639-f3c3914a82bf/dbmodeling10.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/c3cc51e8-4345-49a9-b639-f3c3914a82bf/dbmodeling10.png)
+![DB모델링 null 허용 여부 지정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-10.png){: .align-center}{: width="100%" height="100%"}
+
 
 ### (11) 인덱스 컬럼 지정
 
@@ -269,9 +272,10 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 단점: insert,update,delete 할 때 마다 색인표를 갱신해야하므로 속도가 느리다.
 - 예) 사용자 테이블의 사용자 번호를 인덱스로 지정하였다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/d8bbe20f-a91f-45f1-8bb5-1162659a272b/_2020-11-14__12.33.30.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/d8bbe20f-a91f-45f1-8bb5-1162659a272b/_2020-11-14__12.33.30.png)
+![DB모델링 인덱스 컬럼 지정 방법]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-11-1.png){: .align-center}{: width="100%" height="100%"}
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8dbe520e-b181-4a4d-b712-cbbcb0f704a0/dbmodeling-11-2.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8dbe520e-b181-4a4d-b712-cbbcb0f704a0/dbmodeling-11-2.png)
+![DB모델링 인덱스 컬럼 지정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-11-2.png){: .align-center}{: width="100%" height="100%"}
+
 
 ## 4. 물리모델
 
@@ -284,14 +288,15 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 단어는 알파벳 3자 또는 4자로 축약해서 표현한다.
 - 단어와 단어 사이는 밑 줄( _ )로 표현한다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/5e84fb71-40f8-49f8-8a4c-c132606be018/sbmodeling-21.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/5e84fb71-40f8-49f8-8a4c-c132606be018/sbmodeling-21.png)
+![DB모델링 테이블명과 컬럼명 설정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-21.png){: .align-center}{: width="100%" height="100%"}
+
 
 ### (22) 도메인(domain) 정의 및 적용
 
 - 비슷한 종류의 컬럼들을 묶어 새 타입으로 정의한다.
 - 이점: 타입을 변경할 때 한 번에 여러 컬럼을 변경할 수 있어서 유지보수에 좋다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/a160306b-794b-48d3-8822-d6b7cfa06cd9/model_22.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/a160306b-794b-48d3-8822-d6b7cfa06cd9/model_22.png)
+![DB모델링 도메인 정의 및 적용]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-22.png){: .align-center}{: width="100%" height="100%"}
 
 ### (23) 번호가 자동 증가하는 컬럼을 지정
 
