--- a/_posts/2020/Database/2020-11-13-database-2.md
+++ b/_posts/2020/Database/2020-11-13-database-2.md
@@ -41,7 +41,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
     - 학생(이름,전화,이메일,주소,…)
     - 강의(강의명,설명,시작일,종료일,강의료,…)
 
-![DB모델링 엔티티 식별 및 속성 식별]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-01.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 엔티티 식별 및 속성 식별]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-01.png){: .align-center}{: width="100%" height="100%"}
 
 
 ### (2) 주 키 선정(Primary Key; PK)
@@ -49,7 +49,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - **데이터를 구분할 때 사용할 식별자**를 지정한다.
 - 만약 PK로 지정할 적절한 컬럼이 없거나, 있더라도 여러 개의 컬럼을 묶어서 사용해야 하는 경우 **surrogate key**(대리 키=인공 키) 사용을 고려하라!
 
-![DB모델링 주 키 선정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/Database/dbmodeling-02.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 주 키 선정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-02.png){: .align-center}{: width="100%" height="100%"}
 
 
 ### (3) 포함 관계 및 배타적 관계 추가
@@ -101,7 +101,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 해결책? 두 테이블의 관계를 저장할 테이블을 만든다. “**관계 테이블**” 이라 부른다. **관계 테이블은 각 테이블과 일 대 다의 관계를 맺는다.** 관계 테이블은 **연결 테이블**이라고 불리기도 한다.
 - 위의 예에서는 수강신청 테이블과 교육과정강사 테이블이 관계테이블이다. 강사 테이블과 교육과정 테이블은 다 대 다 관계를 형성한다. 여러 명의 강사가 한 교육과정을 담당할 수도 있고, 여러 교육과정을 한 강사가 담당할 수도 있기 때문이다.
 
-![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-07-1.jpg){: .align-center}{: width="100%" height="100%"}
+![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-07-1.jpg){: .align-center}{: width="80%" height="80%"}
 
 - DBMS는 다 대 다 관계의 데이터를 저장할 수 없기 때문에 다 대 다 관계를 일 대 다 관계로 변경하기 위해 '교육과정강사'라는 테이블을 새로 만들었다. 그리고 이 테이블에 강사 테이블과 교육과정 테이블의 PK값인 교육과정 번호와 강사 번호를 저장하였다. 
     
@@ -112,29 +112,29 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 
 - 데이터 끼리 상호 관계의 개수를 지정한다.
 - 관계 차수의 종류
-    - 1     : *      (0이상) ⇒ FK 컬럼이 **not null** 이다.
-    - 1     : 1..*   (1이상) ⇒ FK 컬럼이 **not null** 이다.
-    - 0..1 : *      (0이상) ⇒ FK 컬럼이 **null** 허용이다.
-    - 0..1 : 1..*   (1이상) ⇒ FK 컬럼이 **null** 허용이다.
+  - 1     : *      (0이상) ⇒ FK 컬럼이 **not null** 이다.
+  - 1     : 1..*   (1이상) ⇒ FK 컬럼이 **not null** 이다.
+  - 0..1 : *      (0이상) ⇒ FK 컬럼이 **null** 허용이다.
+  - 0..1 : 1..*   (1이상) ⇒ FK 컬럼이 **null** 허용이다.
 - 관계 차수를 그림으로 표현
-    - 일 대 일
+  - 일 대 일
 
-![DB모델링 일 대 일 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-1.png){: .align-center}{: width="100%" height="100%"}
-
-
-    - 일 대 다
-
-![DB모델링 일 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-2.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 일 대 일 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-1.png){: .align-center}{: width="80%" height="80%"}
 
 
-    - 다 대 다
+  - 일 대 다
 
-![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-3.jpg){: .align-center}{: width="100%" height="100%"}
+![DB모델링 일 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-2.png){: .align-center}{: width="80%" height="80%"}
+
+
+  - 다 대 다
+
+![DB모델링 다 대 다 관계]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-3.png){: .align-center}{: width="80%" height="80%"}
 
 
 - 예) 교실과 교실 사진의 관계에서, 교실 사진에 null을 허용한다면 zero or more의 관계차수를 지정하고, null을 허용하지 않는다면(not null이라면) one more more의 관계 차수를 지정한다.
 
-![DB모델링 관계 차수 예]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-4.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 관계 차수 예]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08-4.png){: .align-center}{: width="80%" height="80%"}
 
 ![DB모델링 관계 차수]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-08.png){: .align-center}{: width="100%" height="100%"}
 
@@ -146,7 +146,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 즉 PK로 선정되지 않은 나머지 후보 키는 유니크 컬럼으로 지정하여 데이터가 중복되지 않도록 한다.
 - 예) 사용자 테이블에서 이메일을 유니크 컬럼으로 지정한다면, 사용자 정보를 저장할 때 이메일 정보를 중복으로 저장할 수 없다.
 
-![DB모델링 유니크 컬럼 지정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-09.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 유니크 컬럼 지정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-09.png){: .align-center}{: width="80%" height="80%"}
 
 
 - 주의) 이메일과 주민등록번호를 유니크로 지정하는 경우, 각각을 유니크로 지정해야 한다. (이메일, 주민등록번호)를 한 세트로 유니크로 지정하면 안된다.
@@ -166,7 +166,7 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 - 단점: insert,update,delete 할 때 마다 색인표를 갱신해야하므로 속도가 느리다.
 - 예) 사용자 테이블의 사용자 번호를 인덱스로 지정하였다.
 
-![DB모델링 인덱스 컬럼 지정 방법]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-11-1.png){: .align-center}{: width="100%" height="100%"}
+![DB모델링 인덱스 컬럼 지정 방법]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-11-1.png){: .align-center}{: width="80%" height="80%"}
 
 ![DB모델링 인덱스 컬럼 지정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/database/dbmodeling-11-2.png){: .align-center}{: width="100%" height="100%"}
 
