--- a/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
@@ -55,7 +55,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 
 **`mybatis-config.xml`**을 생성하고 편집한다.
 
-**<Properties>**
+**Properties**
 
 - jdbc.properties 파일의 내용을 읽어온다. 읽어온 정보는 ${프로퍼티명} 문법을 이용하여 그 값을 사용할 수 있다.
 
@@ -63,7 +63,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 <properties resource="com/eomcs/mybatis/ex01/jdbc.properties"></properties>
 ```
 
-**<environments>**
+**environments**
 
 - DBMS에 연결할 때 사용할 정보를 설정한다.
 - 여러 개의 연결 정보를 설정해두고 그 중에 사용할 정보를 지정할 수 있다.
@@ -79,7 +79,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 <environment id="development"> ... <environment>
 ```
 
-**<transactionManager>**
+**transactionManager**
 
 - 트랜잭션 관리 방식을 지정한다. 아래 코드에서는 JDBC API를 사용한다는 의미이다.
 - 트랜잭션을 관리한다는 것은 커넥션 객체에 대해서 대신 commit과 rollback을 한다는 의미이다.
@@ -88,7 +88,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 <transactionManager type="JDBC"/>
 ```
 
-**<dataSource>**
+**dataSource**
 
 - DB 커넥션 풀에 관련된 정보와 DB 연결 정보를 설정한다.
 - 이제 개발자가 DB 커넥션 풀을 다룰 필요가 없다.  mybatis 프레임워크에서 관리한다.
@@ -103,7 +103,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 </dataSource>
 ```
 
-**<mappers>**
+**mappers**
 
 - SQL문을 모아둔 파일(SQL 맵퍼 파일이라 부른다)을 지정한다.
 - SQL 맵퍼 파일에 작성해 둔 SQL문을 mybatis가 사용할 것이다.
