--- a/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
@@ -117,7 +117,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 </mappers>
 ```
 
-`**mybatis-config.xml**`
+**`mybatis-config.xml`**
 
 - 하나의 파일로 작성된 mybatis-config.xml 파일은 다음과 같다.
 
@@ -165,7 +165,7 @@ jdbc.password=1111
 
 ### (4) SQL 문장을 작성할 파일 준비
 
-`**BoardMapper.xml**` 
+**`BoardMapper.xml`** 
 
 - SQL 문장을 찾을 때 사용할 그룹명을 설정한다.
 - 보통 그룹명은 SQL 맵퍼 파일이나 그 파일이 있는 경로를 그룹명으로 지정한다. 또는 SQL을 사용할 인터페이스나 클래스 경로를 그룹명으로 지정한다.
