--- a/_posts/2020/Mybatis/2020-11-10-mybatis-3.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-3.md
@@ -34,8 +34,8 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 
 ### SQL문은 태그 안에 작성한다.
 
-- <select> 태그에는 select 문장을, <insert> 태그에는 insert 문장을,  <update> 태그에는 update 문장을,  <delete> 태그에는 delete 문장을 작성한다.
-- 그런데 insert/update/delete 인 경우 <insert>/<update>/<delete> 구분없이 태그를 사용해도 된다.
+- select 태그에는 select 문장을, insert 태그에는 insert 문장을,  update 태그에는 update 문장을, delete 태그에는 delete 문장을 작성한다.
+- 그런데 insert/update/delete 인 경우 insert/update/delete 구분없이 태그를 사용해도 된다.
     - 그 이유는 SQL문을 찾을 때 id 속성 값으로 찾기 때문이다. 하지만 유지보수의 일관성을 위해  SQL 문의 따라 적절한 태그를 사용하라!
 
 ### `select` 태그
