--- a/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
@@ -37,9 +37,9 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 - mybatis는 이를 위해 조건에 따라 SQL을 변경하거나,  동일한 SQL을 반복적으로 생성할 수 있는 문법을 제공한다.
 - 조건을 모두 검사하여 SQL문이 확정되기 전까지 dynamic하고, 상황에 따라 최종적으로 만들어지는 SQL문이 바뀐다.
 
-## 2. <if>
+## 2. if
 
-### <if> 사용 전
+### if 사용 전
 
 - 게시글을 조회하는데, 사용자로부터 게시글의 번호를 입력 받아 조회한다. 만약 오류가 발생하면 전체 게시글을 출력한다.
 - 이 경우 조건문을 사용하지 않으면, 두 개의 SQL문을 사용해야 한다.
@@ -101,7 +101,7 @@ for (Board board : list) {
 - 조건에 따라 생성할 SQL문을 제어할 수 있다.
 - 문법) <if test="조건">SQL문</if>
 
-### <if> 사용하기 I
+### if 사용하기 I
 
 - Mapper 파일에서 조건으로 SQL을 제어한다.
 - 조건에 따라 여러 개의 SQL을 생성할 필요가 없어 편리하다.
@@ -151,7 +151,7 @@ for (Board board : list) {
   </select>
 ```
 
-### <if> 사용하기 II
+### if 사용하기 II
 
 - if문을 여러번 사용하여 SQL문을 작성할 수도 있다.
 - 사용자로부터 검색 키워드를 입력 받아 조회한다. (제목, 내용, 번호로 검색하기)
@@ -207,7 +207,7 @@ for (Board board : list) {
 
 ## 2. <where>
 
-### <where> 사용 전
+### where 사용 전
 
 - 여러 개의 조건을 합쳐서 검색을 하는 경우, 조건이 빠지게 되면 문제가 발생한다.
 
@@ -305,7 +305,7 @@ for (Board board : list) {
 
 - 그러나 이 방법도 문제가 있다. 세 조건문이 모두 실행되지 않는다면 전체 검색 결과가 나와야 하는데 그렇게 작동하지 않는다. 다시 말해서, **선택 조건이 없다는 것은 모든 데이터를 선택한다는 의미**인데, `select8`에서는 조건을 입력하지 않으면, 값이 검색되지 않는다.
 
-### <where> 사용하기
+### where 사용하기
 
 - <where>를 사용하면 or/and 앞에 조건이 없을 때 or/and를 자동으로 제거한다.
 - where 조건이 없을 때는 where을 생성하지 않는다.
@@ -333,11 +333,11 @@ for (Board board : list) {
   </select>
 ```
 
-### <trim> 사용하기
+### trim 사용하기
 
-- <where> 대신에 <trim>을 사용하면 불필요한 SQL 코드 제거할 수 있다.
+- where 대신에 trim을 사용하면 불필요한 SQL 코드 제거할 수 있다.
 - or/and 앞에 조건이 없을 때 or/and를 자동으로 제거한다.
-- <where>보다 정교하게 사용할 수 있지만, <where>을 사용할 수 있다면 <where>을 사용하는게 낫다.
+- where보다 정교하게 사용할 수 있지만, where을 사용할 수 있다면 where을 사용하는게 낫다.
 
 ```xml
 <select id="select8" resultMap="BoardMap" parameterType="map">
@@ -362,9 +362,9 @@ for (Board board : list) {
   </select>
 ```
 
-## 3. <choose>
+## 3. choose
 
-- 여러 개의 조건문을 사용할 때, <choose>를 사용할 수 있다.
+- 여러 개의 조건문을 사용할 때, choose를 사용할 수 있다.
 - 프로그래밍 언어에서 if ~ else처럼 사용할 수 있다.
 
 ```java
@@ -425,7 +425,7 @@ for (Board board : list) {
   </select>
 ```
 
-## 4. <set>
+## 4. set
 
 ### set 사용 전
 
@@ -496,9 +496,9 @@ sqlSession.close();
 
 .
 
-### <set> 사용하기
+### set 사용하기
 
-- <set>을 사용하면 제목만 바꾸는 경우, 내용만 바꾸는 경우, 둘 다 바꾸는 경우에 대해 한 개의 SQL로 처리할 수 있다.
+- set을 사용하면 제목만 바꾸는 경우, 내용만 바꾸는 경우, 둘 다 바꾸는 경우에 대해 한 개의 SQL로 처리할 수 있다.
 
 ```xml
   <update id="update4" parameterType="map">
@@ -515,11 +515,11 @@ sqlSession.close();
 - **<if>**  : 이용하여 사용자가 입력한 항목만 변경한다.
 - **<set>** : SQL 앞,뒤에 붙은 콤마(,)를 자동으로 제거한다.
 
-## 5. <foreach>
+## 5. foreach
 
-### <foreach> 사용 전
+### foreach 사용 전
 
-- 게시물 번호를 여러 개 지정하여 조회를 하려고 한다. <foreach>를 사용하지 않고 여러 개시글을 조회하기 위해서는, 조회하려는 게시글의 수만큼 <if>문을 사용하여야 한다.
+- 게시물 번호를 여러 개 지정하여 조회를 하려고 한다. foreach를 사용하지 않고 여러 개시글을 조회하기 위해서는, 조회하려는 게시글의 수만큼 if문을 사용하여야 한다.
 
 ```java
 HashMap<String, Object> params = new HashMap<>();
@@ -578,9 +578,9 @@ for (Board board : list) {
   </select>
 ```
 
-### <foreach> 사용하기 I
+### foreach 사용하기 I
 
-- <foreach>는 자바 코드로 반복문을 여러번 돌려야 하는 경우에 사용하기 적합하다.
+- foreach는 자바 코드로 반복문을 여러번 돌려야 하는 경우에 사용하기 적합하다.
 
 ```java
 HashMap<String, Object> params = new HashMap<>();
@@ -644,7 +644,7 @@ for(Object no : list) {
 }
 ```
 
-### <foreach> 사용하기 II
+### foreach 사용하기 II
 
 - 위의 select문과 동일한 기능을 하지만, foreach문이 다르게 작성되었다.
 - SQL문에서 값을 여러 개 넣기 위해서는 각각의 파라미터를 괄호로 묶어서 표현하면 된다.
@@ -667,9 +667,9 @@ for(Object no : list) {
   </select>
 ```
 
-### <foreach> 사용하기 III
+### foreach 사용하기 III
 
-- 검색어를 입력받아 일치하는 게시글을 조회하는 경우에도 <foreach>를 사용하면 편리하다.
+- 검색어를 입력받아 일치하는 게시글을 조회하는 경우에도 foreach를 사용하면 편리하다.
 - 사용자가 입력한 검색어를 게시글 제목에 포함하고 있는 게시글을 조회하려고 한다. 사용자가 입력한 검색어를 띄어쓰기로 쪼개어, 각각의 키워드를 포함하는 게시글을 모두 검색 결과에 노출한다.
     - 예) aa 1을 검색어로 입력하면, 제목에 aa 또는 1을 포함하는 게시글이 검색된다.
 
@@ -718,10 +718,10 @@ for (Board board : list) {
   </select>
 ```
 
-## 6. <bind>
+## 6. bind
 
-- <bind>는 변수를 만들 때 사용할 수 있다.
-- <bind>를 사용하면, like문의 문자열 패턴을 만들 때 편하다.
+- `bind`는 변수를 만들 때 사용할 수 있다.
+- bind를 사용하면, like문의 문자열 패턴을 만들 때 편하다.
 - 검색어를 입력하면, 제목에 해당 검색어를 포함하는 게시글을 조회하려고 한다. 이 때, 사용자가 입력하는 검색어를 파라미터로 받는 변수를 만들고, 이를 SQL문에 넣어 사용한다.
 
 ```java
@@ -764,9 +764,9 @@ for (Board board : list) {
   </select>
 ```
 
-## 7. <sql>
+## 7. sql
 
-- <sql> 태그를 사용하면 여러 SQL 문에서 중복적으로 사용하는 SQL 일부를 별도로 관리할 수 있다.
+- `sql` 태그를 사용하면 여러 SQL 문에서 중복적으로 사용하는 SQL 일부를 별도로 관리할 수 있다.
 - 중복된 SQL을 메서드처럼 별도로 관리하기 때문에 사용하여 SQL을 관리하기가 쉬워진다.
 
 ```xml
