--- a/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
@@ -12,7 +12,7 @@ tag:
 - mybatis
 toc: true
 toc_sticky: true
-toc_label: Contents
+toc_label: Mybatis 도입
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
 article_tag1: 1. SQL Mapper
 article_tag2: 2. OR Mapper
@@ -27,7 +27,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 ---
 # Mybatis1 : Mybatis 도입
 
-# **Data Persistence Framework**
+## **Data Persistence Framework**
 
 - 데이터의 영속성(지속성; 등록,조회,변경,삭제)을 대신 처리해주는 프레임워크.
 
