--- a/_posts/2020/Mybatis/2020-11-10-mybatis-2.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-2.md
@@ -12,7 +12,7 @@ tag:
 - mybatis
 toc: true
 toc_sticky: true
-toc_label: Contents
+toc_label: Mybatis 객체 준비 및 실행
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
 article_tag1: 1. Mybatis 객체 준비
 article_tag2: 2. SQL 문 실행
