--- a/_posts/2020/Mybatis/2020-11-10-mybatis-3.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-3.md
@@ -12,7 +12,7 @@ tag:
 - mybatis
 toc: true
 toc_sticky: true
-toc_label: Contents
+toc_label: Mybatis select/insert/update/delete
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
 article_tag1: 1. Mapper.xml
 article_tag2: 2. 컬럼명과 프로퍼티 이름
@@ -29,6 +29,8 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 비트캠프 서초본원 엄진영 강사님의 수업을 듣고 정리했습니다.
 
 ---
+
+# Mybatis3: select/insert/update/delete
 
 ## 1. Mapper.xml
 
