--- a/_posts/2020/Mybatis/2020-11-10-mybatis-5.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-5.md
@@ -1,5 +1,5 @@
 ---
-title: 'Mybatis5: 테이블 조인'
+title: 'Mybatis5: Table Join'
 layout: single
 author_profile: true
 read_time: true
@@ -12,7 +12,7 @@ tag:
 - mybatis
 toc: true
 toc_sticky: true
-toc_label: Contents
+toc_label: Table Join
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
 article_tag1: 1. 조인 하기 전
 article_tag2: 2. 조인 하기
@@ -24,6 +24,9 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 비트캠프 서초본원 엄진영 강사님의 수업을 듣고 정리했습니다.
 
 ---
+
+# Mybatis5: Table Join
+
 ## 1. 조인 하기 전
 
 - 게시글과 첨부파일의 데이터를 확인하는데, 조인을 사용하기 전에는 데이터를 따로 조회해야 한다.
