--- a/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
@@ -12,7 +12,7 @@ tag:
 - mybatis
 toc: true
 toc_sticky: true
-toc_label: Contents
+toc_label: Dynamic SQL
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
 article_tag1: 1. Dynamic SQL?
 article_tag2: 2. <if>
@@ -29,6 +29,9 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 비트캠프 서초본원 엄진영 강사님의 수업을 듣고 정리했습니다.
 
 ---
+
+# Mybatis4: Dynamic SQL
+
 ## 1. Dynamic SQL?
 
 ### Dynamic sql
