--- a/_posts/2020/Mybatis/2020-11-10-mybatis-3.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-3.md
@@ -40,7 +40,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 - 그런데 insert/update/delete 인 경우 insert/update/delete 구분없이 태그를 사용해도 된다.
     - 그 이유는 SQL문을 찾을 때 id 속성 값으로 찾기 때문이다. 하지만 유지보수의 일관성을 위해  SQL 문의 따라 적절한 태그를 사용하라!
 
-### `select` 태그
+### `**select**` 태그
 
 - **id** : SQL문을 찾을 때 사용할 식별자이다.
 - **resultType** : select 결과를 저장할 클래스이름이나 별명이다.
