--- a/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
@@ -208,7 +208,7 @@ for (Board board : list) {
   </select>
 ```
 
-## 2. <where>
+## 3. where
 
 ### where 사용 전
 
@@ -365,7 +365,7 @@ for (Board board : list) {
   </select>
 ```
 
-## 3. choose
+## 4. choose
 
 - 여러 개의 조건문을 사용할 때, choose를 사용할 수 있다.
 - 프로그래밍 언어에서 if ~ else처럼 사용할 수 있다.
@@ -428,7 +428,7 @@ for (Board board : list) {
   </select>
 ```
 
-## 4. set
+## 5. set
 
 ### set 사용 전
 
@@ -518,7 +518,7 @@ sqlSession.close();
 - **<if>**  : 이용하여 사용자가 입력한 항목만 변경한다.
 - **<set>** : SQL 앞,뒤에 붙은 콤마(,)를 자동으로 제거한다.
 
-## 5. foreach
+## 6. foreach
 
 ### foreach 사용 전
 
@@ -721,7 +721,7 @@ for (Board board : list) {
   </select>
 ```
 
-## 6. bind
+## 7. bind
 
 - `bind`는 변수를 만들 때 사용할 수 있다.
 - bind를 사용하면, like문의 문자열 패턴을 만들 때 편하다.
@@ -767,7 +767,7 @@ for (Board board : list) {
   </select>
 ```
 
-## 7. sql
+## 8. sql
 
 - `sql` 태그를 사용하면 여러 SQL 문에서 중복적으로 사용하는 SQL 일부를 별도로 관리할 수 있다.
 - 중복된 SQL을 메서드처럼 별도로 관리하기 때문에 사용하여 SQL을 관리하기가 쉬워진다.
