--- a/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
@@ -188,7 +188,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 ```
 
 ```xml
-<select id="select4" resultMap="BoardMap" parameterType="map">
+  <select id="select4" resultMap="BoardMap" parameterType="map">
     select 
       board_id,
       title, 
@@ -196,15 +196,15 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
       created_date,
       view_count 
     from x_board
-    <if test="item == 1">
-      where board_id = #{keyword}
-    </if>
-    <if test="item == 2">
-      where title like concat('%', #{keyword}, '%')
-    </if>
-    <if test="item == 3">
-      where contents like concat('%', #{keyword}, '%')
-    </if>
+      <if test="item == 1">
+        where board_id = #{keyword}
+      </if>
+      <if test="item == 2">
+        where title like concat('%', #{keyword}, '%')
+      </if>
+      <if test="item == 3">
+        where contents like concat('%', #{keyword}, '%')
+      </if>
   </select>
 ```
 
@@ -253,7 +253,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 ```
 
 ```xml
-<select id="select5" resultMap="BoardMap" parameterType="map">
+  <select id="select5" resultMap="BoardMap" parameterType="map">
     select 
       board_id,
       title, 
@@ -262,15 +262,15 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
       view_count 
     from x_board
     where
-    <if test="no != null">
-      board_id = #{no}
-    </if>
-    <if test="title != null">
-      or title like concat('%', #{title}, '%')
-    </if>
-    <if test="content != null">
-      or contents like concat('%', #{content}, '%')
-    </if>
+      <if test="no != null">
+        board_id = #{no}
+      </if>
+      <if test="title != null">
+        or title like concat('%', #{title}, '%')
+      </if>
+      <if test="content != null">
+        or contents like concat('%', #{content}, '%')
+      </if>
   </select>
 ```
 
@@ -294,15 +294,15 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
       view_count 
     from x_board
     where 1=0
-    <if test="no != null">
-      or board_id = #{no}
-    </if>
-    <if test="title != null">
-      or title like concat('%', #{title}, '%')
-    </if>
-    <if test="content != null">
-      or contents like concat('%', #{content}, '%')
-    </if>
+      <if test="no != null">
+        or board_id = #{no}
+      </if>
+      <if test="title != null">
+        or title like concat('%', #{title}, '%')
+      </if>
+      <if test="content != null">
+        or contents like concat('%', #{content}, '%')
+      </if>
   </select>
 ```
 
@@ -323,16 +323,16 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
       view_count 
     from x_board
     <where>
-	    <if test="no != null">
-	      board_id = #{no}
-	    </if>
-	    <if test="title != null">
-	      or title like concat('%', #{title}, '%')
-	    </if>
-	    <if test="content != null">
-	      or contents like concat('%', #{content}, '%')
-	    </if>
-    </where>
+      <if test="no != null">
+        board_id = #{no}
+      </if>
+      <if test="title != null">
+        or title like concat('%', #{title}, '%')
+      </if>
+      <if test="content != null">
+        or contents like concat('%', #{content}, '%')
+      </if>
+      </where>
   </select>
 ```
 
@@ -397,7 +397,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
   for (Board board : list) {
     System.out.printf("%d, %s, %s, %s, %d\n", 
       board.getNo(),
-  **   board.getTitle(), 
+     board.getTitle(), 
       board.getContent(), 
       board.getRegisteredDate(), 
       board.getViewCount());
@@ -514,8 +514,8 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
   </update>
 ```
 
-- `**<if>**`  : 이용하여 사용자가 입력한 항목만 변경한다.
-- `**<set>**` : SQL 앞,뒤에 붙은 콤마(,)를 자동으로 제거한다.
+- `<if>`  : 이용하여 사용자가 입력한 항목만 변경한다.
+- `<set>` : SQL 앞,뒤에 붙은 콤마(,)를 자동으로 제거한다.
 
 ## 6. `<foreach>`
 
