--- a/_posts/2020/Mybatis/2020-11-10-mybatis-5.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-5.md
@@ -126,9 +126,9 @@ public class Exam0110 {
 ```java
 public class Exam0120 {
   public static void main(String[] args) throws Exception {
-    InputStream inputStream = Resources.getResourceAsStream(//
+    InputStream inputStream = Resources.getResourceAsStream(
         "com/eomcs/mybatis/ex04/mybatis-config.xml");
-    SqlSessionFactory factory = //
+    SqlSessionFactory factory = 
         new SqlSessionFactoryBuilder().build(inputStream);
 
     SqlSession sqlSession = factory.openSession();
