--- a/_posts/2020/Database/2020-11-13-database-1.md
+++ b/_posts/2020/Database/2020-11-13-database-1.md
@@ -24,7 +24,21 @@ last_modified_at: '2020-11-13 22:00:00 +0800'
 비트캠프 서초본원 엄진영 강사님의 수업을 듣고 정리했습니다.
 
 ---
-# DB 모델링
+# DB Modeling
+
+## Database
+
+### Database
+- 데이터베이스는상호 연관이 있는 데이터의 모임을 가리킨다.
+- 여러 사람이 공유하고 사용할 목적으로 통합 관리되는 정보의 집합이다.(wikipedia.org)
+- 논리적으로 연관된 데이터를 검색과 갱신이 쉽도록 고도로 구조화한 것이다.
+
+### DB의 목적(wikipedia.og)
+- 데이터 중복 최소화
+- 데이터 공유
+- 일관성, 무결성, 보안성 유지
+- 데이터 접근 용이성
+- 데이터 저장 공간 절약
 
 ## 모델링와 렌더링
 ### 모델링?
