--- a/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-1.md
@@ -49,7 +49,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 ### (1) 의존 라이브러리 추가
 
 - mvnrepository.com 검색하여 build.gradle 파일에 추가한다.
-- gradle eclipse" 실행한 후 이클립스 에디터에서 프로젝트를 "refresh" 한다.
+- `gradle eclipse` 실행한 후 이클립스 에디터에서 프로젝트를 `refresh` 한다.
 
 ### (2) mybatis 설정 파일 준비
 
@@ -57,7 +57,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 
 **Properties**
 
-- jdbc.properties 파일의 내용을 읽어온다. 읽어온 정보는 ${프로퍼티명} 문법을 이용하여 그 값을 사용할 수 있다.
+- `jdbc.properties` 파일의 내용을 읽어온다. 읽어온 정보는 ${프로퍼티명} 문법을 이용하여 그 값을 사용할 수 있다.
 
 ```xml
 <properties resource="com/eomcs/mybatis/ex01/jdbc.properties"></properties>
@@ -67,7 +67,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 
 - DBMS에 연결할 때 사용할 정보를 설정한다.
 - 여러 개의 연결 정보를 설정해두고 그 중에 사용할 정보를 지정할 수 있다.
-- **default="development"**의 의미는, 여러 연결 정보 중에서 "development"라는 연결 정보를 사용하여 실행하겠다는 의미다.
+- **`default="development"`**의 의미는, 여러 연결 정보 중에서 `development`라는 연결 정보를 사용하여 실행하겠다는 의미다.
 
 ```xml
 <environments default="development"> ... </environments>
@@ -108,7 +108,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 - SQL문을 모아둔 파일(SQL 맵퍼 파일이라 부른다)을 지정한다.
 - SQL 맵퍼 파일에 작성해 둔 SQL문을 mybatis가 사용할 것이다.
 - 맵퍼 파일의 경로를 지정할 때 classpath 경로를 사용해야 한다.
-- 단 패키지명을 구분할 때 '.' 대신에 '/'를 사용해야 한다
+- 단 패키지명을 구분할 때 `.` 대신에 `/`를 사용해야 한다
 
 ```xml
 <mappers>
@@ -119,7 +119,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 
 **`mybatis-config.xml`**
 
-- 하나의 파일로 작성된 mybatis-config.xml 파일은 다음과 같다.
+- 하나의 파일로 작성된 `mybatis-config.xml` 파일은 다음과 같다.
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" ?>
