--- a/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
+++ b/_posts/2020/Mybatis/2020-11-10-mybatis-4.md
@@ -239,8 +239,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
 
   keyScan.close();
 
-  List<Board> list = sqlSession.selectList("BoardMapper.select5", //
-    params);
+  List<Board> list = sqlSession.selectList("BoardMapper.select5", params);
 
   for (Board board : list) {
     System.out.printf("%d, %s, %s, %s, %d\n", 
@@ -397,7 +396,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
   for (Board board : list) {
     System.out.printf("%d, %s, %s, %s, %d\n", 
       board.getNo(),
-     board.getTitle(), 
+      board.getTitle(), 
       board.getContent(), 
       board.getRegisteredDate(), 
       board.getViewCount());
@@ -415,16 +414,16 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
     from x_board
     where
     <choose>
-	    <when test="item == 'no'">
-	      board_id = #{keyword}
-	    </when>
-	    <when test='item == "title"'>
-	      title like concat('%', #{keyword}, '%')
-	    </when>
-	    <otherwise>
-	      contents like concat('%', #{keyword}, '%')
-	    </otherwise>
-	  </choose>
+      <when test="item == 'no'">
+        board_id = #{keyword}
+      </when>
+      <when test='item == "title"'>
+        title like concat('%', #{keyword}, '%')
+      </when>
+      <otherwise>
+        contents like concat('%', #{keyword}, '%')
+      </otherwise>
+    </choose>
   </select>
 ```
 
@@ -720,7 +719,7 @@ last_modified_at: '2020-11-10 22:00:00 +0800'
   </select>
 ```
 
-## 7. <bind>
+## 7. `<bind>`
 
 - `<bind>`는 변수를 만들 때 사용할 수 있다.
 - `<bind>`를 사용하면, like문의 문자열 패턴을 만들 때 편하다.
