--- a/_posts/2020/about-me/2020-04-18-about-me.md
+++ b/_posts/2020/about-me/2020-04-18-about-me.md
@@ -30,11 +30,12 @@ last_modified_at: '3000-04-18 23:00:00 +0800'
 ## Hello, world!
 [![Blog Badge](http://img.shields.io/badge/-Blog-blue?style=flat-square&logo=0E9648&link=https://jiyounyou.github.io/)](https://jiyounyou.github.io/)  Please visit my blog to see what I teach myself to become a web developer.
 
-## Contact me here
-[![Gmail Badge](https://img.shields.io/badge/Gmail-d14836?style=flat-square&logo=Gmail&logoColor=white&link=mailto:younny418@gmail.com)](mailto:younny418@gmail.com)  Feel free to send me an E-mail when you need.
+### Contact me here
+- If you want to contact me, send me an [![Gmail Badge](https://img.shields.io/badge/Gmail-d14836?style=flat-square&logo=Gmail&logoColor=white&link=mailto:younny418@gmail.com)](mailto:younny418@gmail.com).
 
-## Explore my projects
-[![Github Badge](https://img.shields.io/badge/-Github-black?style=flat-square&logo=0E9648&link=https://github.com/jiyounyou/)](https://github.com/jiyounyou)  I have all of my projects in my Github.
+### Explore my projects
+- I have all of my projects in my  [![Github Badge](https://img.shields.io/badge/-Github-black?style=flat-square&logo=0E9648&link=https://github.com/jiyounyou/)](https://github.com/jiyounyou) 
+- Latest Work : [Devloper Village](https://github.com/procompiler/developer-village)
 
 <br>  
 
